--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -2,7 +2,14 @@
 
 h1{
   color: blueviolet
+  
 }
 h2 {
   color: green
+}
+
+.about {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
